// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should controlled collapse work 1`] = `
<ul
  class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
  role="menu"
>
  <li
    class="ant-menu-item"
    role="menuitem"
    style="padding-left: 24px;"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-pie-chart-o"
        />
      </svg>
    </span>
    <span>
      Option 1
    </span>
  </li>
</ul>
`;

exports[`Menu should controlled collapse work 2`] = `
<ul
  class="ant-menu ant-menu-light ant-menu-inline-collapsed ant-menu-root ant-menu-inline"
  role="menu"
>
  <li
    class="ant-menu-item"
    role="menuitem"
    style="padding-left: 24px;"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-pie-chart-o"
        />
      </svg>
    </span>
    <span>
      Option 1
    </span>
  </li>
</ul>
`;
